[tool.poetry]
name = "twillow"
version = "0.1.0"
description = ""
authors = ["wxllow <willow@wxllow.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lupa = "^1.13"
twilio = "^7.9.2"
Flask = "^2.1.2"
rich = "^12.4.4"
toml = "^0.10.2"
google-api-python-client = "^2.50.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
